		instead of as "ADM0".  You should provide a name.
	Various updates to ge package to support ADFs
	GE examples added/revised in ant, regression (with ERCs) and Lawnmower (with ADFs)
	Updated koza.params to use the default parameter bases for ADFStack and
		ADFContext
	Made Fitness and Individual Comparable
	Major changes to MultiObjectiveFitness, including new function paretoDominates
	Additional utility methods added to Code
	Added NSGA2
	Large changes to SPEA2 package
	Added 'likelihood' parameter to all BreedingPipelines
	Updated tutorial 2 to reflect the 'likelihood' parameter
	Added a warning to be output regarding crossover-probability
	Changed crossover-probability to only be between 0.0 and 0.5
	Bug fix to Line Recombination (all data types), which was going into infinite
		loops do to a while loop rather than an if-statement
	REVERSION: FloatVectorIndividual and DoubleVectorIndividual used to adjust the
		Gaussian Mutation standard deviation according to the max - min
		difference on a per-gene basis.  This is no longer done: there is now
		only one standard deviation regardless of gene min/max values.
	Added Polynomial Mutation to FloatVectorIndividual and DoubleVectorIndividual
	Added Simulated Binary Crossover (SBX) to FloatVectorIndividual and
		DoubleVectorIndividual
	Updated copyright information on many parameter files
	Added BBOB
	Added The ECJ Owner's Manual
	Migrated to SVN on Google Code
	Deleted teambots directory
	Removed ParameterDatabaseListener and ParameterDatabaseAdapter
	Got GUI working, sort of, with seeds but it's still flakey with jobs
	Revised code to not use exists(Parameter) anymore, but rather to use
		exists(Parameter, Parameter)
	Fixed bug which was preventing -p from working on the command line, oops
	Added GPData.clone()
	Tweaked manual to discuss GPData.copyTo() and GPData.clone() in more
		detail.  Thanks to Wei He <wei.he.stkm@gmail.com>
	Removed flushing as an option in Output
	Added new initialize method